# Stargate_Simulation

./: .env  App_v2.tsx  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS_REPORT.md  Dockerfile  NEXT_STEPS_ONCE_RENDER_URL_AVAILABLE.md  PROJECT_BEST_PRACTICES.md  README.md  RENDER_DEPLOYMENT_CHECKLIST.md  RENDER_DEPLOYMENT_FINAL_STATUS.md  config.py  devin-init.sh  dualportal.py  fly.toml  hardware.py  logger.py  main.py  monitor_render_deployment.sh  portal.py  pr_description.md  pyproject.toml  requirements.txt  test_chunk1_validation.py  test_chunk2_validation.py  test_chunk3_validation.py  test_chunk4_validation.py  test_complete_integration.py  test_complete_workflow.sh  test_grok_fixes.py  test_render_backend.sh  test_websocket_connection.sh  update_frontend_backend_url.sh
web_frontend/: .env.production  package-lock.json  package.json
web_frontend/public/: CENTRAL_COMMAND_GUIDE.md  DISPLAY_SYSTEMS_GUIDE.md  PARAMETER_GUIDE.md  README.md  STARGATE_OPERATING_MANUAL.md  WEB_PROJECT_PLAN.md
web_frontend/src/: App.tsx  App_v5.tsx  App_v6.tsx  App_v7.tsx
web_frontend/src/components/: BridgeDisplay.tsx  EnergyControls.tsx  MonitoringDashboard.tsx  OperationsControls.tsx  ParameterControls.tsx  PayloadControls.tsx  Portal3D.tsx  PortalDisplay.tsx  SliderStyles.css
