[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stargate-backend"
version = "0.1.0"
description = "Stargate Simulation Backend API"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
websockets = "^12.0"
numpy = "^1.24.3"
scipy = "^1.11.4"
matplotlib = "^3.7.2"
pandas = "^2.0.3"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8080"
